--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -11,34 +11,34 @@
 
 //= require normalize
 
-@import 'foundation/fonts'
-@import 'foundation/helpers'
-@import 'foundation/config'
-@import 'foundation/base'
+@import "foundation/fonts";
+@import "foundation/helpers";
+@import "foundation/config";
+@import "foundation/base";
 
 // -------------------------------------
 //   Components
 // -------------------------------------
 
-@import 'components/*'
+@import "components/*";
 
 // -------------------------------------
 //   Structures
 // -------------------------------------
 
-@import 'structures/*'
+@import "structures/*";
 
 // -------------------------------------
 //   Vendor
 // -------------------------------------
 
-@import 'vendor/*'
+@import "vendor/*";
 
 // -------------------------------------
 //   Foundation - Tools
 // -------------------------------------
 
-@import 'foundation/tools'
+@import "foundation/tools";
 
 // -------------------------------------
 //   Inbox
