--- a/source/assets/stylesheets/components/_cell.scss
+++ b/source/assets/stylesheets/components/_cell.scss
@@ -1,20 +1,20 @@
 // *************************************
 //
-//   Logo
-//   -> Brand mark
+//   Cell
+//   -> Width-limiting blocks
 //
 // -------------------------------------
 //   Template (Haml)
 // -------------------------------------
 //
-// %img.logo
+// .cell
+//   / ...
 //
 // *************************************
 
-.logo
-  height: $logo-size
-  width: $logo-size
-
-  +respond-to($g-m)
-    height: $logo-size-b
-    width: $logo-size-b
+.cell {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $b-maxWidth;
+  position: relative;
+}
