--- a/source/assets/stylesheets/components/_grid.scss
+++ b/source/assets/stylesheets/components/_grid.scss
@@ -17,10 +17,11 @@
 //
 // *************************************
 
-.mv-g
-  display: flex
-  flex-wrap: wrap
-  margin-left: -$g-gutter
+.mv-g {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -$g-gutter;
+}
 
 // -------------------------------------
 //   Modifiers
@@ -28,15 +29,18 @@
 
 // ----- Grid ----- //
 
-.mv-g--centered
-  justify-content: center
+.mv-g--centered {
+  justify-content: center;
+}
 
 // Modifiers
 
-+respond-to($g-l)
+@include respond-to($g-l) {
+  .mv-g--centered_l {
+    justify-content: center;
+  }
+}
 
-  .mv-g--centered_l
-    justify-content: center
 
 // -------------------------------------
 //   Scaffolding
@@ -44,29 +48,36 @@
 
 // ----- Box ----- //
 
-.mv-g-b
-  box-sizing: border-box
-  padding-left: $g-gutter
-  width: 100%
+.mv-g-b {
+  box-sizing: border-box;
+  padding-left: $g-gutter;
+  width: 100%;
+}
 
 // -------------------------------------
 //   Setup
 // -------------------------------------
 
-=g-device-type($namespace: '')
-
-  @each $item in $g-columns
-    @for $index from 1 through $item
-      .mv-g-b--#{$index}of#{$item}#{$namespace}
-        width: percentage($index / $item)
+@mixin g-device-type($namespace: "") {
+  @each $item in $g-columns {
+    @for $index from 1 through $item {
+      .mv-g-b--#{$index}of#{$item}#{$namespace} {
+        width: percentage($index / $item);
+      }
+    }
+  }
+}
 
 // -------------------------------------
 //   Creation
 // -------------------------------------
 
-+g-device-type()
+@include g-device-type;
 
-@if $g-defaults
-  @each $breakpoint, $width in $g-defaults
-    @media screen and (min-width: $width)
-      +g-device-type("_#{$breakpoint}")
+@if $g-defaults {
+  @each $breakpoint, $width in $g-defaults {
+    @media screen and (min-width: $width) {
+      @include g-device-type("_#{$breakpoint}");
+    }
+  }
+}
