--- a/source/assets/stylesheets/structures/_figure.scss
+++ b/source/assets/stylesheets/structures/_figure.scss
@@ -13,9 +13,10 @@
 //
 // *************************************
 
-.figure
-  padding: 0
-  margin: $b-space-l 0
+.figure {
+  padding: 0;
+  margin: $b-space-l 0;
+}
 
 // -------------------------------------
 //   Scaffolding
@@ -23,11 +24,13 @@
 
 // ----- Caption ----- //
 
-.figure-caption
-  font-style: italic
-  text-align: center
+.figure-caption {
+  font-style: italic;
+  text-align: center;
+}
 
 // ----- Image ----- //
 
-.figure-image
-  margin-bottom: $b-space-s
+.figure-image {
+  margin-bottom: $b-space-s;
+}
