Add index hero SVG size

--- a/source/index.haml
+++ b/source/index.haml
@@ -17,7 +17,7 @@ title: 'Web Typography'
       wrote a&nbsp;bunch&nbsp;of&nbsp;blog&nbsp;posts&nbsp;on
 
     %h1.srt Web Typography
-    = image_tag 'web-typography.svg', class: 'mv-heroTitle mbs w100p'
+    = image_tag 'web-typography.svg', width: 975, height: 65, class: 'mv-heroTitle mbs w100p'
 
     %p.mbf.tac.tar_m.tsi.tsl
       Because he’s a nerd
