--- a/source/assets/stylesheets/foundation/_base.scss
+++ b/source/assets/stylesheets/foundation/_base.scss
@@ -5,6 +5,10 @@
 //
 // *************************************
 
+*, ::before, ::after {
+  box-sizing: border-box;
+}
+
 html {
   background: $c-background;
   color: $c-text;
