--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -44,26 +44,4 @@
 //   Inbox
 // -------------------------------------
 
-.mv-thumbnail {
-  border: 1px solid $black;
-  box-shadow: inset 0 0 0 4px $white;
-  padding: 4px;
-}
-
-.mv-thumbnail-media {
-  position: relative;
-  z-index: -1;
-}
-
-.has-cropHeight {
-  position: relative;
-}
-
-@include respond-to($g-m) {
-
-  .mv-cropHeight_m {
-    height: 100%;
-    overflow: hidden;
-    position: absolute;
-  }
-}
+// ...
