--- a/source/assets/stylesheets/structures/_heading.scss
+++ b/source/assets/stylesheets/structures/_heading.scss
@@ -66,3 +66,11 @@
 .heading--3 {
   font-size: inherit;
 }
+
+// ----- Uppercase ----- //
+
+.heading--uppercase {
+  font-weight: 700;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+}
