Fix index Type Specimens link

--- a/source/index.haml
+++ b/source/index.haml
@@ -35,7 +35,7 @@ title: 'Web Typography'
           = image_tag 'type-studies@2x.png', class: 'mv-thumbnail'
 
       .mv-g-b.mv-g-b--2of5_m.has-cropHeight
-        = link_to links.typestudies, class: 'mv-cropHeight_m mv-thumbnail' do
+        = link_to links.typespecimens, class: 'mv-cropHeight_m mv-thumbnail' do
           %p.srt Type Studies
           = image_tag 'type-specimens@2x.jpg', class: 'mv-thumbnail-media w100p'
 
