--- a/source/assets/stylesheets/components/_grid.scss
+++ b/source/assets/stylesheets/components/_grid.scss
@@ -58,7 +58,7 @@
 //   Setup
 // -------------------------------------
 
-@mixin g-device-type($namespace: "") {
+@mixin g-device-type($namespace: '') {
   @each $item in $g-columns {
     @for $index from 1 through $item {
       .mv-g-b--#{$index}of#{$item}#{$namespace} {
@@ -77,7 +77,7 @@
 @if $g-defaults {
   @each $breakpoint, $width in $g-defaults {
     @media screen and (min-width: $width) {
-      @include g-device-type("_#{$breakpoint}");
+      @include g-device-type('_#{$breakpoint}');
     }
   }
 }
