Pump the brakes

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,5 +1,5 @@
 ---
-description: 'John D. Jameson’s nerdy blog. Learn web typography from my tutorial blog posts.'
+description: 'Fonts, more fonts, and front-end development.'
 title: 'Web Typography'
 ---
 
