--- a/styles/base.css
+++ b/styles/base.css
@@ -1,20 +1,39 @@
+@font-face {
+  font-display: block;
+  font-family: 'argent-web';
+  font-style: italic;
+  font-weight: 200;
+  src: url('/fonts/argent-thin-italic.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: block;
+  font-family: 'hermes-maia-web';
+  font-style: normal;
+  font-weight: 300;
+  src: url('/fonts/hermes-maia-t3-regular.woff2') format('woff2');
+}
+
 :where(:root) {
   --jdj-color-fg: #000;
   --jdj-font-body-line-height: 1.5;
   --jdj-font-heading-line-height: 1.25;
-  --jdj-font-serif: serif;
+  --jdj-font-heading: 'argent-web', serif;
+  --jdj-font-sans-serif: 'hermes-maia-web', system-ui, -apple-system, sans-serif;
   --jdj-font-underline-offset: min(1px, 0.025em);
   --jdj-font-underline-thickness: max(1px, 0.075em);
 }
 
 :where(html) {
-  font-size: clamp(16px, calc(10px + 1vw), 20px);
+  /* font-size: clamp(16px, calc(10px + 1vw), 20px); */
+  font-size: 16px;
   height: 100%;
 }
 
 :where(body) {
   -webkit-font-smoothing: antialiased; /* https://www.joshwcomeau.com/css/custom-css-reset/#digit-font-smoothing */
   color: var(--jdj-color-fg);
+  font-family: var(--jdj-font-sans-serif);
   height: 100%;
   line-height: var(--jdj-font-body-line-height);
 }
