--- a/styles/base.css
+++ b/styles/base.css
@@ -83,6 +83,7 @@
 :where(h1, h2, h3, h4, h5, h6) {
   font-size: inherit;
   font-weight: inherit;
+  line-height: var(--jdj-font-line-height-heading);
 }
 
 :where(canvas, img, picture, svg, video) {
@@ -106,4 +107,8 @@
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+code {
+  font-family: var(--jdj-font-family-code);
 }
