--- a/styles/base.css
+++ b/styles/base.css
@@ -25,9 +25,9 @@
     'Roboto Mono', 'Ubuntu Monospace', 'Noto Mono', 'Oxygen Mono',
     'Liberation Mono', monospace, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol', 'Noto Color Emoji';
-  --jdj-font-family-sans: system-ui, -apple-system, 'Segoe UI',
-    'Roboto', 'Ubuntu', 'Cantarell', 'Noto Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --jdj-font-family-sans: system-ui, -apple-system, 'Segoe UI', 'Roboto',
+    'Ubuntu', 'Cantarell', 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   --jdj-font-family-serif: 'argent-web', serif;
 
   --jdj-font-family-body: var(--jdj-font-family-sans);
@@ -48,6 +48,11 @@
   --jdj-font-size-600: 40px;
   --jdj-font-size-700: 48px;
   --jdj-font-size-800: 64px;
+
+  --jdj-font-weight-extra-light: 200;
+  --jdj-font-weight-normal: 400;
+  --jdj-font-weight-semibold: 600;
+  --jdj-font-weight-bold: 700;
 
   --jdj-font-underline-offset: min(1px, 0.025em);
   --jdj-font-underline-thickness: max(1px, 0.075em);
@@ -78,12 +83,39 @@
   --jdj-space-1100: 112px;
   --jdj-space-1200: 128px;
 
+  --jdj-color-btn-bg-default: #f6f8fa;
+  --jdj-color-btn-border-default: #d4d8da;
+  --jdj-color-btn-fg-default: #24292f;
+  --jdj-color-btn-shadow-default: rgb(0 0 0 / 0.05);
+  --jdj-color-btn-shadow-inset-default: rgb(255 255 255 / 0.05);
+  --jdj-font-size-btn-default: var(--jdj-font-size-200);
+
+  --jdj-color-btn-bg-primary: #b55c4f;
+  --jdj-color-btn-border-primary: #9b363c;
+  --jdj-color-btn-fg-primary: #fff;
+  --jdj-color-btn-shadow-inset-primary: #c26e58;
+  --jdj-color-btn-shadow-primary: rgb(74 23 64 / 15%);
+
+  --jdj-color-header-bg: var(--jdj-color-bg-default);
+
   color-scheme: light;
 }
 
 :where([data-theme='dark']) {
-  --jdj-color-bg-default: var(--jdj-color-palette-black);
-  --jdj-color-fg-default: var(--jdj-color-palette-white);
+  --jdj-color-bg-default: #110e1c;
+  --jdj-color-fg-default: #f4f1f8;
+
+  --jdj-color-btn-bg-default: #362d4d;
+  --jdj-color-btn-border-default: #504775;
+  --jdj-color-btn-fg-default: #fff;
+
+  --jdj-color-btn-bg-primary: #806ab4;
+  --jdj-color-btn-border-primary: #593aa7;
+  --jdj-color-btn-shadow-inset-primary: #9875c1;
+  --jdj-color-btn-shadow-primary: rgb(16 8 59 / 15%);
+
+  --jdj-color-header-bg: #191527;
+
   color-scheme: dark;
 }
 
@@ -101,8 +133,6 @@
 
 :where(html) {
   -webkit-font-smoothing: antialiased; /* https://www.joshwcomeau.com/css/custom-css-reset/#digit-font-smoothing */
-  background: var(--jdj-color-bg-default);
-  color: var(--jdj-color-fg-default);
   cursor: initial; /* Reset Sanitize.css `default` value */
   font-family: var(--jdj-font-family-body);
   font-size: 16px;
@@ -112,7 +142,10 @@
 }
 
 :where(body) {
+  background: var(--jdj-color-bg-default); /* Override Theme UI on html */
+  color: var(--jdj-color-fg-default); /* Override Theme UI on html */
   height: 100%;
+  transition: 0.2s ease-out;
 }
 
 :where(*),
