--- a/styles/base.css
+++ b/styles/base.css
@@ -102,6 +102,8 @@
   --jdj-color-ink-underline-bg: #bf645f;
 
   --jdj-color-syntax-highlighter-bg: #090513;
+  --jdj-color-syntax-highlighter-fg: #eeebff;
+  --jdj-color-syntax-highlighter-header-bg: #191527;
 
   color-scheme: light;
 }
