--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,9 @@
 :root {
-  --color-fg: 0, 0, 0;
+  --color-fg: 0 0 0;
   --color-bf: 255 255 255;
 
+  --font-mono: "Monaco", ui-monospace, "Menlo", "Consolas", "Roboto Mono",
+    "Ubuntu Monospace", "Noto Mono", "Oxygen Mono", "Liberation Mono", monospace;
   --font-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
