--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,35 +1,65 @@
-:root {
-  --color-fg: 0 0 0;
-  --color-bf: 255 255 255;
+@import "node_modules/modern-normalize/modern-normalize.css" layer(reset.vendor);
 
-  --font-mono: "Monaco", ui-monospace, "Menlo", "Consolas", "Roboto Mono",
-    "Ubuntu Monospace", "Noto Mono", "Oxygen Mono", "Liberation Mono", monospace;
-  --font-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
-  --space-25: 2px;
-  --space-50: 4px;
-  --space-100: 8px;
-  --space-150: 12px;
-  --space-200: 16px;
-  --space-300: 24px;
-  --space-400: 32px;
-  --space-500: 40px;
-  --space-600: 48px;
+@layer reset.override {
+  html {
+    tab-size: 2; /* Override modern-normalize */
+  }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+@layer base {
+  :root {
+    --color-text-primary: 0 0 0;
+    --color-surface-background: 255 255 255;
 
-html {
-  background: rgb(var(--color-bf));
-  color: rgb(var(--color-fg));
-}
+    --font-mono: "Monaco", ui-monospace, SFMono-Regular, "Menlo", "Consolas",
+      "Roboto Mono", "Ubuntu Monospace", "Noto Mono", "Oxygen Mono",
+      "Liberation Mono", monospace;
+    --font-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
 
-body {
-  font-family: var(--font-sans);
-  padding: var(--space-500);
+    --space-25: 2px;
+    --space-50: 4px;
+    --space-100: 8px;
+    --space-150: 12px;
+    --space-200: 16px;
+    --space-300: 24px;
+    --space-400: 32px;
+    --space-500: 40px;
+    --space-600: 48px;
+
+    --layout-gutter: var(--space-300);
+    --layout-container-width: 1280px;
+    --layout-container-width-narrow: 700px;
+    --layout-container-width-padding-x: max(
+      var(--layout-gutter),
+      calc((100vw - var(--layout-container-width)) / 2)
+    );
+    --layout-container-width-narrow-padding-x: max(
+      var(--layout-gutter),
+      calc((100vw - var(--layout-container-width-narrow)) / 2)
+    );
+  }
+
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+
+  html {
+    background: rgb(var(--color-surface-background));
+    color: rgb(var(--color-text-primary));
+  }
+
+  body {
+    font-family: var(--font-sans);
+  }
+
+  code,
+  kbd,
+  samp,
+  pre {
+    font-family: var(--font-mono);
+  }
 }
