--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,9 +35,11 @@
     --font-mono: "Monaco", ui-monospace, SFMono-Regular, "Menlo", "Consolas",
       "Roboto Mono", "Ubuntu Monospace", "Noto Mono", "Oxygen Mono",
       "Liberation Mono", monospace;
-    --font-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
+    --font-cendra: cendra-web, cendra-web-fallback-helvetica-neue,
+      cendra-web-fallback-arial, var(--font-mono);
+    --font-sans: var(--font-inter), system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
 
     --space-25: 2px;
     --space-50: 4px;
