--- a/src/app/posts/[slug]/_post.module.css
+++ b/src/app/posts/[slug]/_post.module.css
@@ -44,4 +44,10 @@
     color: rgb(72 57 226 / 81%);
     font-family: var(--font-cendra);
   }
+
+  .content img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
