Add initial home page styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,6 +81,11 @@
     font-family: var(--font-sans);
   }
 
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
   code,
   kbd,
   pre,
