--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,9 @@
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
 
+    --lineHeight-body: 1.5;
+    --lineHeight-heading: 1.333;
+
     --space-25: 2px;
     --space-50: 4px;
     --space-100: 8px;
@@ -73,7 +76,7 @@
   html {
     background: rgb(var(--color-surface-background));
     color: rgb(var(--color-text-primary));
-    line-height: 1.5;
+    line-height: var(--lineHeight-body);
     -webkit-font-smoothing: antialiased;
   }
 
@@ -84,6 +87,15 @@
   a {
     color: inherit;
     text-decoration: none;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    line-height: var(--lineHeight-heading);
   }
 
   code,
